# tensorrt_inference

ScaledYOLOv4/: CMakeLists.txt  ScaledYOLOv4.cpp  ScaledYOLOv4.h  ScaledYOLOv4_trt.py
ScaledYOLOv4/test/: ScaledYOLOv4_trt.py
